kube-ingress/nginx-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    run: nginx-app
spec:
  # modify replicas according to your case
  replicas: 3
  selector:
    matchLabels:
        run: nginx-app
  template:
    metadata:
        labels:
          run: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx:alpine
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  annotations:
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-xxxxx
spec:
  type: LoadBalancer
  selector:
    run: nginx-app
  ports:
  - name: nginx-app
    protocol: TCP
    port: 80
    targetPort: 80
