kube-ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-golang
  annotations:
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-xxxxx
spec:
  type: LoadBalancer
  selector:
    run: simple-golang
  ports: 
  - name: simple-golang
    protocol: TCP
    port: 80
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: simple-node
  annotations:
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-xxxxx
spec:
  type: LoadBalancer
  selector:
    run: simple-node
  ports:
  - name: simple-node
    protocol: TCP
    port: 80
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  annotations:
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-xxxxx
spec:
  type: LoadBalancer
  selector:
    run: nginx-app
  ports:
  - name: nginx-app
    protocol: TCP
    port: 80
    targetPort: 80
