kube-ingress/simple-golang.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-golang
  labels:
    run: simple-golang
spec:
  # modify replicas according to your case
  replicas: 3
  selector:
    matchLabels:
        run: simple-golang
  template:
    metadata:
      labels:
        run: simple-golang
      # annotations: 
      #   consul.hashicorp.com/connect-inject: "true"
    spec:
      containers:
      - name: simple-golang
        image: zooeymoon1989/simple-golang:latest
        ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: simple-golang
spec:
  type: ClusterIP
  selector:
    run: simple-golang
  ports:
  - name: simple-golang
    protocol: TCP
    port: 80
    targetPort: 3000
  externalIPs:
    - 43.159.40.114
