kube-ingress/simple-node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node
  labels:
    run: simple-node
spec:
  # modify replicas according to your case
  replicas: 3
  selector:
    matchLabels:
        run: simple-node
  template:
    metadata:
        labels:
          run: simple-node
    spec:
      containers:
      - name: simple-node
        image: zooeymoon1989/simple-node:latest
        ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: simple-node
  annotations:
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-ppgcg0iy
spec:
  type: ClusterIP
  selector:
    run: simple-node
  ports:
  - name: simple-node
    protocol: TCP
    port: 80
    targetPort: 3000
