kube-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec: 
  ingressClassName: envoy
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - pathType: Prefix
        path: /golang
        backend:
          service:
            name: simple-golang
            port:
              number: 80
  - host: alpaca.example.com
    http:
      paths:
      - pathType: Prefix
        path: /node
        backend:
          service:
            name: simple-node
            port:
              number: 80
